将 `.asc` 文件重命名为 `.adoc` 文件。

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ asciidoctor {
     backends 'pdf','html5'
     outputDir = file("$buildDir/docs")
     sources {
-        include 'index.asc'
+        include 'index.adoc'
     }
     resources {
         from ('src/docs/asciidoc') {
